--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>task</title>
-        <link rel="stylesheet" text="text/css" href="./task.css"/>
+        <link rel="stylesheet" text="text/css" href="./index.css.css"/>
         <meta name="viewport" content="width=device-width,intal-scale=1.0"/>
         <script src="https://kit.fontawesome.com/89d0202ad7.js" crossorigin="anonymous"></script>
     </head>
